src/test/deca/codegen/valid/test_expr_convfloat.deca
// @result 4.50000e00
// @result 4.50000e00
// @result 4.50000e00
// @result 4.50000e00
{	
	println(2.5 + (1 + 1));
	println(2.5 + 1 + 1);
	println((1 + 1) + 2.5);
	println(1 + 1 + 2.5);
}
