src/test/deca/codegen/invalid/overflow_div_int_float.deca
{
    println(2000000000/0.07);
}
